--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.0
+python-dotenv==0.19.1
 regex==2021.10.8
 tomli==1.2.1
 typing-extensions==3.10.0.2
