--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 black==21.9b0
+boto3==1.18.62
+botocore==1.21.62
 click==8.0.3
 Flask==2.0.2
 Flask-Classful==0.14.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
+jmespath==0.10.0
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.0
+python-dateutil==2.8.2
 python-dotenv==0.19.1
 regex==2021.10.8
+s3transfer==0.5.0
+six==1.16.0
 tomli==1.2.1
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 Werkzeug==2.0.2
