--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,15 @@ click==8.0.3
 debugpy==1.5.0
 decorator==5.1.0
 dnspython==1.16.0
+email-validator==1.1.3
 entrypoints==0.3
 Flask==2.0.2
 Flask-Classful==0.14.2
+Flask-Login==0.4.1
+flask-mongoengine==1.0.0
+Flask-WTF==0.15.1
 gunicorn==20.1.0
+idna==3.3
 ipykernel==6.4.1
 ipython==7.28.0
 ipython-genutils==0.2.0
@@ -22,6 +27,7 @@ jupyter-client==7.0.6
 jupyter-core==4.8.1
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
+mongoengine==0.23.1
 mypy-extensions==0.4.3
 nest-asyncio==1.5.1
 parso==0.8.2
@@ -46,3 +52,4 @@ typing-extensions==3.10.0.2
 urllib3==1.26.7
 wcwidth==0.2.5
 Werkzeug==2.0.2
+WTForms==2.3.3
