--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 appnope==0.1.2
 backcall==0.2.0
+bcrypt==3.2.0
 black==21.9b0
+blinker==1.4
 boto3==1.18.62
 botocore==1.21.62
+cffi==1.15.0
 click==8.0.3
 debugpy==1.5.0
 decorator==5.1.0
@@ -11,7 +14,6 @@ email-validator==1.1.3
 entrypoints==0.3
 Flask==2.0.2
 Flask-Classful==0.14.2
-Flask-Login==0.4.1
 flask-mongoengine==1.0.0
 Flask-WTF==0.15.1
 gunicorn==20.1.0
@@ -37,6 +39,7 @@ pickleshare==0.7.5
 platformdirs==2.4.0
 prompt-toolkit==3.0.20
 ptyprocess==0.7.0
+pycparser==2.20
 Pygments==2.10.0
 pymongo==3.12.0
 python-dateutil==2.8.2
