--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dnspython==1.16.0
 email-validator==1.1.3
 entrypoints==0.3
 Flask==2.0.2
+Flask-Admin==1.5.8
 Flask-Classful==0.14.2
 flask-mongoengine==1.0.0
 Flask-WTF==0.15.1
@@ -46,7 +47,7 @@ pymongo==3.12.0
 python-dateutil==2.8.2
 python-dotenv==0.19.1
 pyzmq==22.3.0
-regex==2021.10.8
+regex==2020.1.8
 s3transfer==0.5.0
 six==1.16.0
 tomli==1.2.1
