--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ python-dateutil==2.8.2
 python-dotenv==0.19.1
 pyzmq==22.3.0
 regex==2020.1.8
+repackage==0.7.3
 s3transfer==0.5.0
 six==1.16.0
 tomli==1.2.1
