--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ appnope==0.1.2
 asgiref==3.4.1
 backcall==0.2.0
 bcrypt==3.2.0
-black==21.9b0
+black==22.3.0
 blinker==1.4
 boto3==1.18.62
 botocore==1.21.62
@@ -17,6 +17,8 @@ Flask==2.0.2
 Flask-Admin==1.5.8
 Flask-Classful==0.14.2
 flask-mongoengine==1.0.0
+flask-swagger==0.2.14
+flask-swagger-ui==3.36.0
 Flask-WTF==0.15.1
 gunicorn==20.1.0
 idna==3.3
@@ -46,6 +48,7 @@ Pygments==2.10.0
 pymongo==3.12.0
 python-dateutil==2.8.2
 python-dotenv==0.19.1
+PyYAML==6.0
 pyzmq==22.3.0
 regex==2020.1.8
 repackage==0.7.3
